--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="pt-2">
           <ul>
             <li><i class="bi bi-person-fill"></i>&nbsp;Sam</li>
-            <li><i class="bi bi-clock-fill"></i>&nbsp;June 10, 2022</li>
+            <li><i class="bi bi-clock-fill"></i>&nbsp;June 10, 2022.</li>
             <li>
               <a href="#"
                 ><i class="bi bi-chat-right-fill"></i>&nbsp;Leave a comment</a
